--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#postgres = "*"
-mysql = "*"
+postgres = "0.18.1"
+mysql = "20.1.0"
 
 [profile.release]
 debug = false
